# base9-builder

./: .dockerignore  .gitignore  CONTRIBUTE.md  Cargo.toml  Dockerfile  README.md  build.rs  data.yaml  tmp.mustache  update_binary.sh
.github/workflows/: build.yml
docs/: wasm_binary_size_findings.md
manual_testing/: data.yaml  programmable.vim
manual_testing/absolute/: absolute.mustache  test.sh  test_cases
scripts/: data.yaml  deploy.sh  monkey_patch_wasm.sh  print_ansi_4bit.sh  programmable.vim.mustache  shell.sh.mustache
scripts/absolute_tests/: test.sh  test_cases
src/: base9.rs  color_science.rs  config.rs  default_config.json  default_config.yml  generator.rs  lib.rs  main.rs  palette.rs  preview.mustache  utils.rs  wasm.rs
templates/: absolute.mustache  preview.mustache  shell.sh.mustache  simple.mustache  typescript.mustache  wasm_typescript_types.mustache
tests/: integration_tests.rs  palette_with_correct_absolute_order  schema.yml
