[package]
name = "base9-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "0.6"
mustache = "0.9"
clap = { version = "3.0", features = ["cargo"] }
regex = "1.5"
serde_yaml = "0.8"
anyhow = "1"
itertools = "0.8"
