[package]
name = "base9-builder"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[profile.release]
lto = "true"
opt-level = "z"
codegen-units = 1
# panic = "abort"

[dependencies]
ext_palette = { version = "0.6", package = "palette" }
mustache = "0.9"
clap = { version = "3.0", features = ["cargo"] }
const-regex = "0.1"
serde_json = "1.0"
anyhow = "1"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

